기초 html 코드 설정 수정

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h1>훔쳐먹은 마시멜로</h1>
         <p id="score">점수: 0</p>
         <p id="timer">남은 시간: 30초</p>
-        <div id="marshmallow-area"></div>
+        <canvas id="gameCanvas"></canvas>
+        <button id="start-btn">게임 시작</button>
     </div>
     <script src="script.js"></script>
 </body>
