--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <div id="game-container">
         <h1>훔쳐먹은 마시멜로</h1>
-        <p id="score">점수: 0</p>
-        <p id="timer">남은 시간: 30초</p>
+        <p id="score">0</p>
         <canvas id="gameCanvas"></canvas>
         <button id="start-btn">게임 시작</button>
     </div>
