--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>마시멜로 게임</title>
-    <link rel="stylesheet" href="style.css">
+    <title>마시멜로 시작!</title>
+    <link rel="stylesheet" href="mainstyle.css">
 </head>
 <body>
-    <div id="game-container">
+    <div id="intro">
         <h1>훔쳐먹은 마시멜로</h1>
-        <p id="score">0</p>
-        <canvas id="gameCanvas"></canvas>
         <button id="start-btn">게임 시작</button>
     </div>
-    <script src="script.js"></script>
+    <img src="/assets/images/start/erpin.gif">
+    <script>
+	
+    </script>
 </body>
 </html>
