--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     </div>
     <img src="assets/images/start/erpin.gif">
     <script>
-	
+        function resizeFullHeight() {
+   	    const vh = window.innerHeight * 0.01;
+  	    document.documentElement.style.setProperty('--vh', `${vh}px`);
+        }
+
+        window.addEventListener('resize', resizeFullHeight);
+	window.addEventListener('load', resizeFullHeight);
+	    
     </script>
+
 </body>
 </html>
