이미지 강제 제정렬 스크립트

--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
     window.addEventListener('orientationchange', () => {
         setTimeout(updateVH, 100); // 회전 직후 약간의 시간 후 다시 계산
     });
+    
+    //이미지 강제 제정렬<2>
+    function fixImagePosition() {
+        const erpin = document.querySelector("img");
+        erpin.style.left = "50%";
+        erpin.style.top = "50%";
+        erpin.style.transform = "translate(-50%, -40%) scale(3.5)";
+    }
+
+    window.addEventListener("orientationchange", () => {
+        setTimeout(() => {
+            updateVH();
+            fixImagePosition();
+        }, 200); // 리플로우 후 실행
+    });
 
 	</script>
 
