resize 이벤트 중복 방지 디바운싱 코드 추가

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
 	  setTimeout(setRealVh, 200);
 	});
 
+	let timeout;
+	function setRealVhDebounced() {
+	    clearTimeout(timeout);
+	    timeout = setTimeout(() => {
+	        setRealVh();
+	    }, 200);
+	}
+	window.addEventListener('resize', setRealVhDebounced);
+
 
     </script>
 
