--vh 크기 검사 콘솔 추가

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 	    }, 200);
 	}
 	window.addEventListener('resize', setRealVhDebounced);
-
+	    
+	// --vh 크기 확인
+	console.log(window.innerHeight, document.documentElement.style.getPropertyValue('--vh'));
 
     </script>
 
