--- a/index.html
+++ b/index.html
@@ -74,14 +74,10 @@
 	}
 	window.addEventListener('resize', setRealVhDebounced);
 
-	showVhSet(size); // --vh 크기 확인
+	showVhSet(); // --vh 크기 확인
 
-	function showVhSet(size) {
-		if (size == "size") {
-			console.log(window.innerHeight, document.documentElement.style.getPropertyValue('--vh'));
-		} else {
-			console.log("매개변수 오류");
-		}
+	function showVhSet() {
+		console.log(window.innerHeight, document.documentElement.style.getPropertyValue('--vh'));
 	}
 	
     </script>
