--- a/index.html
+++ b/index.html
@@ -108,6 +108,27 @@
 	window.addEventListener('orientationchange', () => {
 	    setTimeout(updateImageStyle, 200);
 	});
+
+	//이미지 비율 확인
+	function checkImageRatio() {
+	    const erpin = document.querySelector('img'); // 이미지 요소 선택
+	    if (erpin) {
+	        const naturalWidth = img.naturalWidth; // 이미지 원본 가로 크기
+	        const naturalHeight = img.naturalHeight; // 이미지 원본 세로 크기
+	        const currentWidth = img.offsetWidth; // 현재 화면상 가로 크기
+	        const currentHeight = img.offsetHeight; // 현재 화면상 세로 크기
+	
+	        console.log('원본 비율:', naturalWidth / naturalHeight);
+	        console.log('현재 비율:', currentWidth / currentHeight);
+	        console.log('원본 크기:', naturalWidth, naturalHeight);
+	        console.log('현재 크기:', currentWidth, currentHeight);
+	    } else {
+	        console.log('이미지를 찾을 수 없습니다!');
+	    }
+	}
+	
+	// 함수 호출
+	checkImageRatio();
 	
     </script>
 
