--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="mainstyle.css">
 </head>
 <body>
-    <img src="assets/images/start/erpin.gif">
+    <img src="assets/images/start/erpin.gif" alt="에르핀 냠냠<다시 로드해 주세요>">
     
     <div id="intro">
         <h1>훔쳐먹은 마시멜로</h1>
