log 메세지 추가

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>훔쳐먹은 마시멜로</h1>
         <button id="start-btn">게임 시작</button>
     </div>
-    
+    <div id="console"></div>
     
     <script src="indscript.js"></script>
 
